vercel serverless wrapper + cached mongo

--- a/.env
+++ b/.env
@@ -2,11 +2,13 @@
 PORT=4001
 NODE_ENV=development
 
-CLIENT_ORIGIN_PANEL=http://localhost:3001
-CLIENT_ORIGIN_MAIN=http://localhost:3000
+CLIENT_ORIGIN_PANEL=https://panel.alpertunaozkan.com
+CLIENT_ORIGIN_PANEL_2=https://www.panel.alpertunaozkan.com
+CLIENT_ORIGIN_MAIN=https://alpertunaozkan.com
+CLIENT_ORIGIN_MAIN_2=https://www.alpertunaozkan.com
 
 MONGODB_URI=mongodb+srv://umaysafak:66966053u@ozkan-hukuk-danismanlik.ofruff8.mongodb.net/ozkan_hukuk_danismanlik?retryWrites=true&w=majority&appName=ozkan-hukuk-danismanlik-db
-SESSION_SECRET=1111111111
+SESSION_SECRET=aısdhıu2e89q7auhıfbjnjq0ıdoaks
 CLOUDINARY_CLOUD_NAME=dhd5qma6b
 CLOUDINARY_API_KEY=642412791835664
 CLOUDINARY_API_SECRET=fbe3vpN92MBfNDfVHlOVZTXMnt8
