--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/server.js",
-    "seed:user": "node --loader ts-node/esm src/scripts/seed-user.ts"
+    "start": "node dist/server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -25,9 +24,11 @@
     "express-rate-limit": "^8.1.0",
     "express-session": "^1.18.2",
     "helmet": "^8.1.0",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "serverless-http": "^3.2.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
