--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,4 @@
 {
-  "functions": {
-    "api/[[...slug]].ts": {
-      "memory": 1024,
-      "maxDuration": 10
-    }
-  }
+  "functions": { "api/[[...slug]].ts": { "memory": 1024, "maxDuration": 10 } },
+  "outputDirectory": "."
 }
