--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # api/.env
 PORT=4001
-NODE_ENV=development
+NODE_ENV=production
 
 CLIENT_ORIGIN_PANEL=https://panel.alpertunaozkan.com
 CLIENT_ORIGIN_PANEL_2=https://www.panel.alpertunaozkan.com
