--- a/.env
+++ b/.env
@@ -1,11 +1,9 @@
-# api/.env
 PORT=4001
 NODE_ENV=production
-
 CLIENT_ORIGIN_PANEL=https://panel.alpertunaozkan.com
 CLIENT_ORIGIN_MAIN=https://alpertunaozkan.com
 CLIENT_ORIGIN_MAIN_2=https://www.alpertunaozkan.com
-
+PUBLIC_SITE_URL=https://www.alpertunaozkan.com
 MONGODB_URI=mongodb+srv://umaysafak:66966053u@ozkan-hukuk-danismanlik.ofruff8.mongodb.net/ozkan_hukuk_danismanlik?retryWrites=true&w=majority&appName=ozkan-hukuk-danismanlik-db
 SESSION_SECRET=aısdhıu2e89q7auhıfbjnjq0ıdoaks
 CLOUDINARY_CLOUD_NAME=dhd5qma6b
